[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylemmy"
dynamic = ["version"]
description = "pylemmy enables simple access to Lemmy's API with Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "Daniel Ferreira", email = "daniel.ferreira.1@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic>=1.7",
    "requests>=2.18",
    "loguru>=0.3",
    "aiostream~=0.4.5",
]

[project.urls]
Documentation = "https://dcferreira.com/pylemmy"
Issues = "https://github.com/dcferreira/pylemmy/issues"
Source = "https://github.com/dcferreira/pylemmy"

[tool.hatch.version]
path = "pylemmy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "mypy",
    "types-requests",
    "pre-commit",
    "pytest",
    "pytest-docker-compose @ git+https://github.com/tmeckel/pytest-docker-compose@feat/docker-compose-v2",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
typing = ["mypy {args:.}"]
integration = "pytest tests/integration"
unit = "pytest tests/unit"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs~=1.4.3",
    "mkdocs-material~=9.1.16",
    "mkdocs-autorefs~=0.4.1",
    "mkdocstrings[python]~=0.22.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve"

[tool.black]
target-version = ["py37"]

[tool.ruff]
target-version = "py37"
line-length = 88
select = [
    "A",
    "ARG",
    "B",
    "C",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Allow blank lines after section in docstrings
    "D412",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["pylemmy"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
# Examples can have prints and magic values, and don't need docstrings
"examples/*" = ["D103", "PLR2004", "T201"]
# Allow `id` and `type` shadowing in the api files, and no need for docstrings
"pylemmy/api/*" = ["A003", "D10"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
source_pkgs = ["pylemmy", "tests"]
branch = true
parallel = true
omit = [
    "pylemmy/__about__.py",
]

[tool.coverage.paths]
pylemmy = ["pylemmy", "*/pylemmy/pylemmy"]
tests = ["tests", "*/pylemmy/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = """
--docker-compose=tests/integration/docker-compose.yml \
--docker-compose-remove-volumes"""

[[tool.mypy.overrides]]
module = [
    "aiostream",
]
ignore_missing_imports = true